test/compilable/imports/test11595b.d
module imports.test11595b;

class Bar{}
