test/fail_compilation/fail153.d

final class Foo { }

class Bar : Foo { }
